refactor: move to mysql and clean up the core business logic
